src/components/Episode/Episode.scss
@import "../../globals.scss";

.episode {
  margin: 3px 0;
  padding: 0 10px 0 0;
  width: calc(100% / 3);
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: space-between;

  .link {
    width: 100%;

    .wrapper {
      position: relative;

      .play-button {
        position: absolute;
        z-index: 10;
        width: 100px;
        top: 60%;
        left: 50%;
        opacity: 0;
        transform: translate(-50%, -50%);
        transition: all 0.25s ease;
      }

      .text-wrapper {
        position: absolute;
        width: 100%;
        padding: 0 5%;
        top: 87%;
        left: 50%;
        transform: translate(-50%, -50%);
        display: flex;
        align-items: center;
        justify-content: space-between;
        z-index: 20;
        background-color: #fff;

        background: #c6ffdd;
        background: -webkit-linear-gradient(
          to bottom,
          transparent,
          rgba(0, 0, 0, 0.8)
        );
        background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.8));

        a:link,
        a:visited {
          font-size: 0.8rem;
          letter-spacing: 0.2px;
          font-weight: 100;
          text-shadow: 0 1px 0 rgb(0, 0, 0, 0.25);
        }

        a:hover,
        a:active {
          text-decoration: underline;
        }

        h2 {
          font-size: 1.2rem;
          font-weight: 600;
          text-shadow: 0 1px 0 rgb(0 0 0 / 25%);
        }
      }

      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        object-position: center;
        transition: all 0.55s ease;
        z-index: -10;
      }

      &:hover {
        img {
          transform: scale(1.1);
        }

        .play-button {
          top: 50%;
          opacity: 0.7;
          transition: all 0.25s ease;
        }
      }
    }
  }
}

